busybox: add wide-dhcp6c port. Special thanks to Leonid Lisovskiy (lly.dev) from wl500g project

--- a/trunk/configs/IPv6/busybox.config
+++ b/trunk/configs/IPv6/busybox.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Busybox version: 1.20.2
-# Tue Aug 28 19:37:30 2012
+# Fri Sep  7 08:57:30 2012
 #
 CONFIG_HAVE_DOT_CONFIG=y
 
@@ -789,11 +789,11 @@ CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_TIME=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_DAYTIME=y
 CONFIG_FEATURE_INETD_SUPPORT_BUILTIN_CHARGEN=y
 # CONFIG_FEATURE_INETD_RPC is not set
-CONFIG_IP=y
-CONFIG_FEATURE_IP_ADDRESS=y
-CONFIG_FEATURE_IP_LINK=y
-CONFIG_FEATURE_IP_ROUTE=y
-CONFIG_FEATURE_IP_TUNNEL=y
+# CONFIG_IP is not set
+# CONFIG_FEATURE_IP_ADDRESS is not set
+# CONFIG_FEATURE_IP_LINK is not set
+# CONFIG_FEATURE_IP_ROUTE is not set
+# CONFIG_FEATURE_IP_TUNNEL is not set
 # CONFIG_FEATURE_IP_RULE is not set
 # CONFIG_FEATURE_IP_SHORT_FORMS is not set
 # CONFIG_FEATURE_IP_RARE_PROTOCOLS is not set
@@ -809,7 +809,7 @@ CONFIG_NETSTAT=y
 CONFIG_FEATURE_NETSTAT_WIDE=y
 CONFIG_FEATURE_NETSTAT_PRG=y
 CONFIG_NSLOOKUP=y
-# CONFIG_NTPD is not set
+CONFIG_NTPD=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_PSCAN is not set
 CONFIG_ROUTE=y
@@ -835,7 +835,7 @@ CONFIG_FEATURE_TRACEROUTE_VERBOSE=y
 # CONFIG_FEATURE_TRACEROUTE_USE_ICMP is not set
 # CONFIG_TUNCTL is not set
 # CONFIG_FEATURE_TUNCTL_UG is not set
-CONFIG_UDHCPC6=y
+# CONFIG_UDHCPC6 is not set
 # CONFIG_UDHCPD is not set
 # CONFIG_DHCPRELAY is not set
 # CONFIG_DUMPLEASES is not set
@@ -851,6 +851,8 @@ CONFIG_UDHCP_DEBUG=1
 CONFIG_FEATURE_UDHCP_RFC5969=y
 CONFIG_UDHCPC_DEFAULT_SCRIPT="/tmp/udhcpc.script"
 CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=924
+CONFIG_DHCP6C=y
+# CONFIG_FEATURE_DHCP6_AUTH is not set
 CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS=""
 # CONFIG_UDPSVD is not set
 CONFIG_VCONFIG=y
