--- a/trunk/configs/IPv4/busybox.config
+++ b/trunk/configs/IPv4/busybox.config
@@ -809,7 +809,7 @@ CONFIG_NETSTAT=y
 CONFIG_FEATURE_NETSTAT_WIDE=y
 CONFIG_FEATURE_NETSTAT_PRG=y
 CONFIG_NSLOOKUP=y
-# CONFIG_NTPD is not set
+CONFIG_NTPD=y
 # CONFIG_FEATURE_NTPD_SERVER is not set
 # CONFIG_PSCAN is not set
 CONFIG_ROUTE=y
@@ -851,6 +851,8 @@ CONFIG_UDHCP_DEBUG=1
 # CONFIG_FEATURE_UDHCP_RFC5969 is not set
 CONFIG_UDHCPC_DEFAULT_SCRIPT="/tmp/udhcpc.script"
 CONFIG_UDHCPC_SLACK_FOR_BUGGY_SERVERS=924
+# CONFIG_DHCP6C is not set
+# CONFIG_FEATURE_DHCP6_AUTH is not set
 CONFIG_IFUPDOWN_UDHCPC_CMD_OPTIONS=""
 # CONFIG_UDPSVD is not set
 CONFIG_VCONFIG=y
