busybox config: add missing brctl applet

--- a/trunk/configs/IPv6/busybox.config
+++ b/trunk/configs/IPv6/busybox.config
@@ -739,9 +739,9 @@ CONFIG_FEATURE_PREFER_IPV4_ADDRESS=y
 # CONFIG_VERBOSE_RESOLUTION_ERRORS is not set
 CONFIG_ARP=y
 CONFIG_ARPING=y
-# CONFIG_BRCTL is not set
-# CONFIG_FEATURE_BRCTL_FANCY is not set
-# CONFIG_FEATURE_BRCTL_SHOW is not set
+CONFIG_BRCTL=y
+CONFIG_FEATURE_BRCTL_FANCY=y
+CONFIG_FEATURE_BRCTL_SHOW=y
 # CONFIG_DNSD is not set
 CONFIG_ETHER_WAKE=y
 # CONFIG_FAKEIDENTD is not set
