libs: remove unused libusb-1.0, small fixes for libusb-0.1

--- a/trunk/libs/libusb/Makefile
+++ b/trunk/libs/libusb/Makefile
@@ -13,7 +13,7 @@ config_test:
 configure:
 	( cd $(SRC_NAME) ; \
 	./configure \
-		--prefix=/ \
+		--prefix= \
 		--disable-static \
 		--disable-build-docs \
 		--enable-debug=no \
