--- a/trunk/.config
+++ b/trunk/.config
@@ -35,8 +35,8 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Enable XFS filesystem support (only for kernel 3.x, add ~0.6MB)
 #CONFIG_FIRMWARE_ENABLE_XFS=y
 
-### Enable HFS+ filesystem support (only for kernel 3.x, add ~0.2MB)
-#CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
+### Enable HFS+ filesystem support (only for kernel 3.x, add ~0.1MB)
+CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
 
 ### Use L2TP client "rp-l2tp" instead of "xl2tpd"
 #CONFIG_FIRMWARE_USE_RPL2TP=y
