--- a/trunk/configs/IPv6/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/kernel-3.0.x.config
@@ -588,7 +588,7 @@ CONFIG_L2TP=y
 CONFIG_STP=y
 CONFIG_BRIDGE=y
 CONFIG_BRIDGE_2WAYS_FDB=y
-CONFIG_BRIDGE_IGMP_SNOOPING=y
+# CONFIG_BRIDGE_IGMP_SNOOPING is not set
 CONFIG_BRIDGE_EAP=y
 # CONFIG_NET_DSA is not set
 CONFIG_VLAN_8021Q=y
