kernel-2.6.21.x configs: disable USB_STORAGE_PRE_ALLOCATE_URB

--- a/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
@@ -1131,7 +1131,7 @@ CONFIG_USB_PRINTER=m
 # may also be needed; see USB_STORAGE Help for more information
 #
 CONFIG_USB_STORAGE=m
-CONFIG_USB_STORAGE_PRE_ALLOCATE_URB=y
+# CONFIG_USB_STORAGE_PRE_ALLOCATE_URB is not set
 # CONFIG_USB_STORAGE_DEBUG is not set
 # CONFIG_USB_STORAGE_DATAFAB is not set
 # CONFIG_USB_STORAGE_FREECOM is not set
