kernel configs: fix RA_NAT_HW value (always y)

--- a/trunk/configs/IPv4/kernel-2.6.21.x.config
+++ b/trunk/configs/IPv4/kernel-2.6.21.x.config
@@ -1662,7 +1662,7 @@ CONFIG_RT3090_AP_BRIDGE_FASTPATH=y
 #
 # NAT acell mode
 #
-CONFIG_RA_NAT_HW=m
+CONFIG_RA_NAT_HW=y
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_BCM_NAT=y
 CONFIG_RA_HW_NAT=m
