--- a/trunk/configs/IPv4/kernel-3.0.x.ram.config
+++ b/trunk/configs/IPv4/kernel-3.0.x.ram.config
@@ -1942,7 +1942,7 @@ CONFIG_RT3090_AP_READ_MAC_FROM_MTD=y
 #
 # CONFIG_BCM_NAT is not set
 # CONFIG_RA_NAT_NONE is not set
-CONFIG_RA_NAT_HW=m
+CONFIG_RA_NAT_HW=y
 CONFIG_RA_HW_NAT=m
 CONFIG_RA_HW_NAT_LAN_VLANID=1
 CONFIG_RA_HW_NAT_WAN_VLANID=2
