--- a/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
@@ -1667,7 +1667,7 @@ CONFIG_RALINK_RT3090_AP_DBG=y
 #
 # NAT acell mode
 #
-CONFIG_RA_NAT_HW=m
+CONFIG_RA_NAT_HW=y
 # CONFIG_RA_NAT_NONE is not set
 CONFIG_BCM_NAT=y
 CONFIG_RA_HW_NAT=m
