firmware version up

--- a/trunk/.config
+++ b/trunk/.config
@@ -9,8 +9,8 @@ CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
 
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
-CONFIG_FIRMWARE_ROOTFS_VER="2.4"
-CONFIG_FIRMWARE_BUILDS_VER="012"
+CONFIG_FIRMWARE_ROOTFS_VER="2.5"
+CONFIG_FIRMWARE_BUILDS_VER="015"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Build firmware with shared libs for tcpdump, minidlna, transmission.
@@ -29,7 +29,7 @@ CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 ### Perform sstrip for decrease firmware size (~50KB)
 #CONFIG_FIRMWARE_PERFORM_SSTRIP=y
 
-### Enable IPv6 (not fully supported yet)
+### Enable IPv6 (full support only for kernel 3.x yet)
 #CONFIG_FIRMWARE_ENABLE_IPV6=y
 
 ### Enable XFS filesystem support (only for kernel 3.x, add ~0.6MB)
