linux kernel: temporarily disable hw_nat native ipv6 offload

--- a/trunk/configs/IPv6/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv6/kernel-2.6.21.x.ram.config
@@ -333,7 +333,7 @@ CONFIG_NETFILTER=y
 #
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
-# CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT is not set
+CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
 # CONFIG_NETFILTER_NETLINK is not set
 CONFIG_NF_CONNTRACK_ENABLED=y
 CONFIG_NF_PRIVILEGE_CONNTRACK=y
@@ -1737,7 +1737,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
