--- a/trunk/configs/IPv6/kernel-3.0.x.config
+++ b/trunk/configs/IPv6/kernel-3.0.x.config
@@ -416,7 +416,7 @@ CONFIG_NETFILTER_ADVANCED=y
 #
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
-# CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT is not set
+CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
 # CONFIG_NETFILTER_NETLINK is not set
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
 # CONFIG_NETFILTER_NETLINK_LOG is not set
@@ -478,7 +478,7 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=m
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=m
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
 # CONFIG_NETFILTER_XT_MATCH_CPU is not set
 # CONFIG_NETFILTER_XT_MATCH_DCCP is not set
 # CONFIG_NETFILTER_XT_MATCH_DEVGROUP is not set
@@ -2019,7 +2019,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-CONFIG_RA_HW_NAT_IPV6=y
+# CONFIG_RA_HW_NAT_IPV6 is not set
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
