--- a/trunk/linux-3.0.x/net/netfilter/Kconfig
+++ b/trunk/linux-3.0.x/net/netfilter/Kconfig
@@ -282,18 +282,6 @@ config NF_CONNTRACK_PPTP
 
 	  To compile it as a module, choose M here.  If unsure, say N.
 
-config NF_CONNTRACK_QUAKE3
-	tristate "Quake3 protocol support"
-	depends on NETFILTER_ADVANCED
-	help
-	  Quake III Arena  connection tracking helper. This module allows for a
-	  stricter firewall rulebase if one only allows traffic to a master
-	  server. Connections to Quake III server IP addresses and ports returned
-	  by the master server will be tracked automatically.
-
-	  If you want to compile it as a module, say M here and read
-	  <file:Documentation/modules.txt>.  If unsure, say 'Y'.
-
 config NF_CONNTRACK_RTSP
 	tristate  "RTSP protocol support"
 	depends on NETFILTER_ADVANCED
@@ -557,18 +545,6 @@ config NETFILTER_XT_TARGET_LED
 
 	  For more information on the LEDs available on your system, see
 	  Documentation/leds-class.txt
-
-config NETFILTER_XT_TARGET_IMQ
-        tristate '"IMQ" target support'
-	depends on NETFILTER_XTABLES
-	depends on IP_NF_MANGLE || IP6_NF_MANGLE
-	select IMQ
-	default m if NETFILTER_ADVANCED=n
-        help
-          This option adds a `IMQ' target which is used to specify if and
-          to which imq device packets should get enqueued/dequeued.
-
-          To compile it as a module, choose M here.  If unsure, say N.
 
 config NETFILTER_XT_TARGET_MARK
 	tristate '"MARK" target support'
@@ -858,34 +834,6 @@ config NETFILTER_XT_MATCH_HASHLIMIT
 	  destination address' or `500pps from any given source address'
 	  with a single rule.
 
-config NETFILTER_XT_MATCH_CONDITION
-        tristate  '"condition" match support'
-        depends on NETFILTER_XTABLES
-        help
-          This option allows you to match firewall rules against condition
-          variables stored in the /proc/net/nf_condition directory.
-
-          N.B.: older versions used /proc/net/ipt_condition. You can
-          reenable it with "compat_dir_name".
-
-          If you want to compile it as a module, say M here and read
-          Documentation/modules.txt.  If unsure, say `N'.
-
-config NETFILTER_XT_MATCH_GEOIP
-   tristate  '"geoip" match support'
-   depends on NETFILTER_XTABLES
-   help
-          This option allows you to match a packet by its source or
-          destination country.  Basically, you need a country's
-          database containing all subnets and associated countries.
-
-          For the complete procedure and understanding, read :
-          http://people.netfilter.org/acidfu/geoip/howto/geoip-HOWTO.html
-
-          If you want to compile it as a module, say M here and read
-          <file:Documentation/modules.txt>.  The module will be
-          called `ipt_geoip'.  If unsure, say `N'.
-
 config NETFILTER_XT_MATCH_HELPER
 	tristate '"helper" match support'
 	depends on NF_CONNTRACK
@@ -1112,9 +1060,9 @@ config NETFILTER_XT_MATCH_STATE
 
 config NETFILTER_XT_MATCH_LAYER7
 	tristate '"layer7" match support'
+	depends on NETFILTER_ADVANCED
 	depends on NETFILTER_XTABLES
-	depends on IP_NF_CONNTRACK || NF_CONNTRACK
-	depends on NF_CT_ACCT
+	depends on NF_CONNTRACK
 	help
 	  Say Y if you want to be able to classify connections (and their
 	  packets) based on regular expression matching of their application
