--- a/trunk/configs/IPv4/kernel-3.0.x.config
+++ b/trunk/configs/IPv4/kernel-3.0.x.config
@@ -233,8 +233,7 @@ CONFIG_PERF_USE_VMALLOC=y
 # CONFIG_PERF_COUNTERS is not set
 # CONFIG_VM_EVENT_COUNTERS is not set
 CONFIG_TINY=y
-CONFIG_ETHTOOL=y
-CONFIG_NET_SK_FILTER=y
+# CONFIG_ETHTOOL is not set
 CONFIG_MAX_SWAPFILES_SHIFT=0
 CONFIG_MAX_USER_RT_PRIO=100
 # CONFIG_PCI_QUIRKS is not set
@@ -320,9 +319,7 @@ CONFIG_PCI_DOMAINS=y
 CONFIG_PCI_DISABLE_COMMON_QUIRKS=y
 # CONFIG_PCI_IOV is not set
 CONFIG_PCIEPORTBUS=y
-CONFIG_PCIEAER=y
-# CONFIG_PCIE_ECRC is not set
-# CONFIG_PCIEAER_INJECT is not set
+# CONFIG_PCIEAER is not set
 # CONFIG_PCIEASPM is not set
 CONFIG_MMU=y
 # CONFIG_PCCARD is not set
@@ -393,7 +390,7 @@ CONFIG_NETFILTER_ADVANCED=y
 #
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
-# CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT is not set
+CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
 # CONFIG_NETFILTER_NETLINK is not set
 # CONFIG_NETFILTER_NETLINK_QUEUE is not set
 # CONFIG_NETFILTER_NETLINK_LOG is not set
@@ -413,8 +410,7 @@ CONFIG_NF_CONNTRACK_H323=m
 # CONFIG_NF_CONNTRACK_NETBIOS_NS is not set
 # CONFIG_NF_CONNTRACK_SNMP is not set
 CONFIG_NF_CONNTRACK_PPTP=m
-# CONFIG_NF_CONNTRACK_QUAKE3 is not set
-CONFIG_NF_CONNTRACK_RTSP=m
+# CONFIG_NF_CONNTRACK_RTSP is not set
 # CONFIG_NF_CONNTRACK_SANE is not set
 CONFIG_NF_CONNTRACK_SIP=m
 # CONFIG_NF_CONNTRACK_TFTP is not set
@@ -437,7 +433,6 @@ CONFIG_NETFILTER_XT_TARGET_CONNMARK=m
 CONFIG_NETFILTER_XT_TARGET_DSCP=m
 CONFIG_NETFILTER_XT_TARGET_HL=m
 # CONFIG_NETFILTER_XT_TARGET_IDLETIMER is not set
-# CONFIG_NETFILTER_XT_TARGET_IMQ is not set
 CONFIG_NETFILTER_XT_TARGET_MARK=m
 # CONFIG_NETFILTER_XT_TARGET_NFLOG is not set
 # CONFIG_NETFILTER_XT_TARGET_NFQUEUE is not set
@@ -455,15 +450,13 @@ CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=m
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_CONNMARK=m
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=m
 # CONFIG_NETFILTER_XT_MATCH_CPU is not set
 # CONFIG_NETFILTER_XT_MATCH_DCCP is not set
 # CONFIG_NETFILTER_XT_MATCH_DEVGROUP is not set
 CONFIG_NETFILTER_XT_MATCH_DSCP=m
 # CONFIG_NETFILTER_XT_MATCH_ESP is not set
 # CONFIG_NETFILTER_XT_MATCH_HASHLIMIT is not set
-CONFIG_NETFILTER_XT_MATCH_CONDITION=m
-# CONFIG_NETFILTER_XT_MATCH_GEOIP is not set
 # CONFIG_NETFILTER_XT_MATCH_HELPER is not set
 CONFIG_NETFILTER_XT_MATCH_HL=m
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
@@ -480,6 +473,7 @@ CONFIG_NETFILTER_XT_MATCH_MULTIPORT=y
 CONFIG_NETFILTER_XT_MATCH_RECENT=y
 # CONFIG_NETFILTER_XT_MATCH_SCTP is not set
 CONFIG_NETFILTER_XT_MATCH_STATE=y
+# CONFIG_NETFILTER_XT_MATCH_LAYER7 is not set
 # CONFIG_NETFILTER_XT_MATCH_STATISTIC is not set
 CONFIG_NETFILTER_XT_MATCH_STRING=m
 CONFIG_NETFILTER_XT_MATCH_WEBSTR=m
@@ -497,10 +491,12 @@ CONFIG_NF_CONNTRACK_IPV4=y
 # CONFIG_NF_CONNTRACK_PROC_COMPAT is not set
 # CONFIG_IP_NF_QUEUE is not set
 CONFIG_IP_NF_IPTABLES=y
+CONFIG_IP_NF_IPTABLES_SPEEDUP=y
 CONFIG_IP_NF_MATCH_TOS=m
 # CONFIG_IP_NF_MATCH_AH is not set
 # CONFIG_IP_NF_MATCH_ECN is not set
 CONFIG_IP_NF_MATCH_TTL=m
+CONFIG_IP_NF_MATCH_IPP2P=m
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
 CONFIG_IP_NF_TARGET_LOG=y
@@ -517,22 +513,16 @@ CONFIG_NF_NAT_FTP=m
 # CONFIG_NF_NAT_TFTP is not set
 # CONFIG_NF_NAT_AMANDA is not set
 CONFIG_NF_NAT_PPTP=m
-# CONFIG_NF_NAT_QUAKE3 is not set
-CONFIG_NF_NAT_RTSP=m
+# CONFIG_NF_NAT_RTSP is not set
 CONFIG_NF_NAT_H323=m
 CONFIG_NF_NAT_SIP=m
 CONFIG_IP_NF_MANGLE=m
-# CONFIG_IP_NF_TARGET_ROUTE is not set
 # CONFIG_IP_NF_TARGET_CLUSTERIP is not set
 CONFIG_IP_NF_TARGET_TOS=m
 # CONFIG_IP_NF_TARGET_ECN is not set
 CONFIG_IP_NF_TARGET_TTL=m
 # CONFIG_IP_NF_RAW is not set
 # CONFIG_IP_NF_ARPTABLES is not set
-# CONFIG_IP_NF_MATCH_IPP2P is not set
-# CONFIG_IP_NF_MATCH_WEB is not set
-# CONFIG_IP_NF_MATCH_WEBMON is not set
-# CONFIG_IP_NF_LFP is not set
 # CONFIG_IP_DCCP is not set
 # CONFIG_IP_SCTP is not set
 # CONFIG_RDS is not set
@@ -852,7 +842,6 @@ CONFIG_NETDEVICES=y
 # CONFIG_BONDING is not set
 # CONFIG_MACVLAN is not set
 # CONFIG_EQUALIZER is not set
-# CONFIG_IMQ is not set
 CONFIG_TUN=y
 # CONFIG_VETH is not set
 # CONFIG_ARCNET is not set
@@ -981,7 +970,6 @@ CONFIG_PPP_SYNC_TTY=y
 # CONFIG_PPP_DEFLATE is not set
 # CONFIG_PPP_BSDCOMP is not set
 CONFIG_PPP_MPPE=y
-# CONFIG_PPP_MPPE_MPPC is not set
 CONFIG_PPPOE=y
 CONFIG_PPTP=y
 CONFIG_PPPOL2TP=y
