--- a/trunk/linux-3.0.x/drivers/net/Kconfig
+++ b/trunk/linux-3.0.x/drivers/net/Kconfig
@@ -124,125 +124,6 @@ config EQUALIZER
 	  To compile this driver as a module, choose M here: the module
 	  will be called eql.  If unsure, say N.
 
-config IMQ
-	tristate "IMQ (intermediate queueing device) support"
-	depends on NETDEVICES && NETFILTER
-	---help---
-	  The IMQ device(s) is used as placeholder for QoS queueing
-	  disciplines. Every packet entering/leaving the IP stack can be
-	  directed through the IMQ device where it's enqueued/dequeued to the
-	  attached qdisc. This allows you to treat network devices as classes
-	  and distribute bandwidth among them. Iptables is used to specify
-	  through which IMQ device, if any, packets travel.
-
-	  More information at: http://www.linuximq.net/
-
-	  To compile this driver as a module, choose M here: the module
-	  will be called imq.  If unsure, say N.
-
-choice
-	prompt "IMQ behavior (PRE/POSTROUTING)"
-	depends on IMQ
-	default IMQ_BEHAVIOR_AB
-	help
-	  This setting defines how IMQ behaves in respect to its
-	  hooking in PREROUTING and POSTROUTING.
-
-	  IMQ can work in any of the following ways:
-
-	      PREROUTING   |      POSTROUTING
-	  -----------------|-------------------
-	  #1  After NAT    |      After NAT
-	  #2  After NAT    |      Before NAT
-	  #3  Before NAT   |      After NAT
-	  #4  Before NAT   |      Before NAT
-
-	  The default behavior is to hook before NAT on PREROUTING
-	  and after NAT on POSTROUTING (#3).
-
-	  This settings are specially usefull when trying to use IMQ
-	  to shape NATed clients.
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
-config IMQ_BEHAVIOR_AA
-	bool "IMQ AA"
-	help
-	  This setting defines how IMQ behaves in respect to its
-	  hooking in PREROUTING and POSTROUTING.
-
-	  Choosing this option will make IMQ hook like this:
-
-	  PREROUTING:   After NAT
-	  POSTROUTING:  After NAT
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
-config IMQ_BEHAVIOR_AB
-	bool "IMQ AB"
-	help
-	  This setting defines how IMQ behaves in respect to its
-	  hooking in PREROUTING and POSTROUTING.
-
-	  Choosing this option will make IMQ hook like this:
-
-	  PREROUTING:   After NAT
-	  POSTROUTING:  Before NAT
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
-config IMQ_BEHAVIOR_BA
-	bool "IMQ BA"
-	help
-	  This setting defines how IMQ behaves in respect to its
-	  hooking in PREROUTING and POSTROUTING.
-
-	  Choosing this option will make IMQ hook like this:
-
-	  PREROUTING:   Before NAT
-	  POSTROUTING:  After NAT
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
-config IMQ_BEHAVIOR_BB
-	bool "IMQ BB"
-	help
-	  This setting defines how IMQ behaves in respect to its
-	  hooking in PREROUTING and POSTROUTING.
-
-	  Choosing this option will make IMQ hook like this:
-
-	  PREROUTING:   Before NAT
-	  POSTROUTING:  Before NAT
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
-endchoice
-
-config IMQ_NUM_DEVS
-	int "Number of IMQ devices"
-	range 2 16
-	depends on IMQ
-	default "16"
-	help
-	  This setting defines how many IMQ devices will be created.
-
-	  The default value is 16.
-
-	  More information can be found at: www.linuximq.net
-
-	  If not sure leave the default settings alone.
-
 config TUN
 	tristate "Universal TUN/TAP device driver support"
 	select CRC32
@@ -3401,12 +3282,8 @@ config PPP_BSDCOMP
 	  module; it is called bsd_comp and will show up in the directory
 	  modules once you have said "make modules". If unsure, say N.
 
-choice
-	prompt "PPP Microsoft Point-to-Point Encryption (EXPERIMENTAL)"
-	default PPP_MPPE
-
 config PPP_MPPE
-	bool "PPP MPPE compression (encryption)"
+	tristate "PPP MPPE compression (encryption) (EXPERIMENTAL)"
 	depends on PPP && EXPERIMENTAL
 	select CRYPTO
 	select CRYPTO_SHA1
@@ -3418,21 +3295,6 @@ config PPP_MPPE
 
 	  See http://pptpclient.sourceforge.net/ for information on
 	  configuring PPTP clients and servers to utilize this method.
-
-config PPP_MPPE_MPPC
-	bool "PPP MPPE/MPPC compression (encryption)"
-	depends on PPP && EXPERIMENTAL
-	select CRYPTO
-	select CRYPTO_SHA1
-	select CRYPTO_ARC4
-	select CRYPTO_ECB
-	---help---
-	  Support for the MPPE Encryption protocol and MPPC Compression,
-	  as employed by the Microsoft Point-to-Point Tunneling Protocol.
-
-	  See http://pptpclient.sourceforge.net/ for information on
-	  configuring PPTP clients and servers to utilize this method.
-endchoice
 
 config PPPOE
 	tristate "PPP over Ethernet (EXPERIMENTAL)"
