kernel-2.6.21.x: ipv6 fixes, upstream updates

--- a/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv4/kernel-2.6.21.x.ram.config
@@ -182,7 +182,7 @@ CONFIG_FULL_PANIC=y
 CONFIG_MEMPOOL=y
 CONFIG_XATTR=y
 CONFIG_FILE_LOCKING=y
-CONFIG_ETHTOOL=y
+# CONFIG_ETHTOOL is not set
 CONFIG_INETPEER=y
 CONFIG_NET_SK_FILTER=y
 CONFIG_NET_DEV_MULTICAST=y
@@ -318,7 +318,7 @@ CONFIG_NETFILTER=y
 #
 CONFIG_NAT_CONE=y
 # CONFIG_NAT_LINUX is not set
-# CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT is not set
+CONFIG_NETFILTER_RALINK_SWQOS_SUPPORT=y
 # CONFIG_NETFILTER_NETLINK is not set
 CONFIG_NF_CONNTRACK_ENABLED=y
 CONFIG_NF_PRIVILEGE_CONNTRACK=y
