--- a/trunk/configs/IPv6/kernel-2.6.21.x.ram.config
+++ b/trunk/configs/IPv6/kernel-2.6.21.x.ram.config
@@ -182,7 +182,7 @@ CONFIG_FULL_PANIC=y
 CONFIG_MEMPOOL=y
 CONFIG_XATTR=y
 CONFIG_FILE_LOCKING=y
-CONFIG_ETHTOOL=y
+# CONFIG_ETHTOOL is not set
 CONFIG_INETPEER=y
 CONFIG_NET_SK_FILTER=y
 CONFIG_NET_DEV_MULTICAST=y
