--- a/trunk/user/samba3/Makefile
+++ b/trunk/user/samba3/Makefile
@@ -15,51 +15,38 @@ config_test:
 
 configure:
 	cd $(srcdir) && \
-	ac_cv_func_prctl=no \
 	SMB_BUILD_CC_NEGATIVE_ENUM_VALUES=yes \
-	linux_getgrouplist_ok=no \
-	samba_cv_fpie=no \
+	ac_cv_type_long_long=yes \
+	fu_cv_sys_stat_statvfs64=yes \
+	samba_cv_USE_SETEUID=no \
+	samba_cv_USE_SETRESUID=yes \
+	samba_cv_SIZEOF_INO_T=yes \
+	samba_cv_SIZEOF_OFF_T=yes \
 	samba_cv_have_longlong=yes \
+	samba_cv_have_setresuid=yes \
+	samba_cv_HAVE_C99_VSNPRINTF=yes \
 	samba_cv_HAVE_INO64_T=yes \
 	samba_cv_HAVE_OFF64_T=yes \
-	samba_cv_HAVE_STRUCT_FLOCK64=yes \
-	samba_cv_SIZEOF_OFF_T=yes \
-	samba_cv_HAVE_MMAP=yes \
-	samba_cv_HAVE_FTRUNCATE_EXTEND=yes \
-	samba_cv_REPLACE_READDIR=no \
-	samba_cv_HAVE_BROKEN_LINUX_SENDFILE=no \
-	samba_cv_HAVE_SENDFILE=yes \
-	samba_cv_HAVE_WRFILE_KEYTAB=yes \
-	samba_cv_HAVE_KERNEL_OPLOCKS_LINUX=yes \
-	samba_cv_HAVE_IFACE_IFCONF=yes \
-	samba_cv_have_setresgid=yes \
-	samba_cv_have_setresuid=yes \
-	samba_cv_USE_SETRESUID=yes \
-	samba_cv_USE_SETREUID=yes \
-	samba_cv_HAVE_C99_VSNPRINTF=yes \
-	samba_cv_HAVE_GETTIMEOFDAY_TZ=yes \
-	samba_cv_REALPATH_TAKES_NULL=no \
-	samba_cv_HAVE_FCNTL_LOCK=yes \
-	samba_cv_HAVE_SECURE_MKSTEMP=yes \
-	samba_cv_HAVE_NATIVE_ICONV=no \
 	samba_cv_HAVE_BROKEN_FCNTL64_LOCKS=no \
 	samba_cv_HAVE_BROKEN_GETGROUPS=no \
-	samba_cv_HAVE_BROKEN_READDIR_NAME=no \
-	samba_cv_HAVE_DEV64_T=no \
-	samba_cv_HAVE_DEVICE_MAJOR_FN=yes \
-	samba_cv_HAVE_DEVICE_MINOR_FN=yes \
+	samba_cv_HAVE_BROKEN_READDIR=no \
+	samba_cv_HAVE_BROKEN_LINUX_SENDFILE=no \
+	samba_cv_HAVE_SENDFILE=yes \
+	samba_cv_HAVE_FTRUNCATE_EXTEND=yes \
 	samba_cv_HAVE_IFACE_AIX=no \
-	samba_cv_HAVE_KERNEL_CHANGE_NOTIFY=no \
+	samba_cv_HAVE_IFACE_IFCONF=yes \
+	samba_cv_HAVE_IFACE_IFREQ=yes \
+	samba_cv_HAVE_SECURE_MKSTEMP=yes \
+	samba_cv_HAVE_UNSIGNED_CHAR=yes \
+	samba_cv_HAVE_GETTIMEOFDAY_TZ=yes \
+	samba_cv_HAVE_FCNTL_LOCK=yes \
+	samba_cv_HAVE_STRUCT_FLOCK64=yes \
+	samba_cv_HAVE_MMAP=no \
+	samba_cv_HAVE_KERNEL_OPLOCKS_LINUX=no \
 	samba_cv_HAVE_KERNEL_SHARE_MODES=yes \
-	samba_cv_HAVE_MAKEDEV=yes \
-	samba_cv_HAVE_TRUNCATED_SALT=no \
-	samba_cv_HAVE_UNSIGNED_CHAR=no \
-	samba_cv_HAVE_WORKING_AF_LOCAL=yes \
-	samba_cv_HAVE_Werror=yes \
+	samba_cv_HAVE_NATIVE_ICONV=no \
 	samba_cv_REPLACE_INET_NTOA=no \
-	samba_cv_SIZEOF_DEV_T=yes \
-	samba_cv_SIZEOF_INO_T=yes \
-	samba_cv_SIZEOF_TIME_T=no \
+	samba_cv_LINUX_LFS_SUPPORT=yes \
 	CFLAGS="$(SMBCFLAGS)" LDFLAGS="$(SMBLDFLAGS)" \
 	./configure \
 		--host=$(HOST_TARGET) \
