--- a/trunk/configs/IPv6/kernel-2.6.21.x.config
+++ b/trunk/configs/IPv6/kernel-2.6.21.x.config
@@ -1706,7 +1706,7 @@ CONFIG_BCM_NAT=y
 CONFIG_RA_HW_NAT=m
 CONFIG_RA_HW_NAT_LAN_VLANID=1
 CONFIG_RA_HW_NAT_WAN_VLANID=2
-CONFIG_RA_HW_NAT_BINDING_THRESHOLD=30
+CONFIG_RA_HW_NAT_BINDING_THRESHOLD=20
 CONFIG_RA_HW_NAT_QURT_LMT=100
 CONFIG_RA_HW_NAT_HALF_LMT=50
 CONFIG_RA_HW_NAT_FULL_LMT=25
@@ -1732,7 +1732,7 @@ CONFIG_RA_HW_NAT_UNB_MNP=1000
 CONFIG_RA_HW_NAT_UDP_DLTA=5
 CONFIG_RA_HW_NAT_TCP_DLTA=5
 CONFIG_RA_HW_NAT_FIN_DLTA=5
-# CONFIG_RA_HW_NAT_IPV6 is not set
+CONFIG_RA_HW_NAT_IPV6=y
 # CONFIG_RA_HW_NAT_ACL2UP_HELPER is not set
 # CONFIG_RA_HW_NAT_PCI is not set
 CONFIG_RA_HW_NAT_WIFI=y
