--- a/trunk/.config
+++ b/trunk/.config
@@ -10,7 +10,7 @@ CONFIG_TOOLCHAIN_DIR=/opt/toolchain-rt3883
 ### Firmware version (X.X.X.X-YYY)
 CONFIG_FIRMWARE_KERNEL_VER="3.0"
 CONFIG_FIRMWARE_ROOTFS_VER="2.8"
-CONFIG_FIRMWARE_BUILDS_VER="020"
+CONFIG_FIRMWARE_BUILDS_VER="021"
 CONFIG_FIRMWARE_PRODUCT_ID="RT-N56U"
 
 ### Build firmware with shared libs for tcpdump, minidlna, transmission.
@@ -39,7 +39,7 @@ CONFIG_FIRMWARE_ENABLE_IPV6=y
 CONFIG_FIRMWARE_ENABLE_HFSPLUS=y
 
 ### Use L2TP client "rp-l2tp" instead of "xl2tpd"
-#CONFIG_FIRMWARE_USE_RPL2TP=y
+CONFIG_FIRMWARE_USE_RPL2TP=y
 
 ### Select WebGUI (0=Ribbon Fixed, 1=ASUS Blue)
 CONFIG_FIRMWARE_WEBGUI=0
