--- a/trunk/linux-2.6.21.x/drivers/net/rtl8367/Makefile
+++ b/trunk/linux-2.6.21.x/drivers/net/rtl8367/Makefile
@@ -2,6 +2,9 @@
 # Makefile for the rtl8367
 #
 
+EXTRA_CFLAGS += -D_LITTLE_ENDIAN
+EXTRA_CFLAGS += -DDISABLE_VLAN_SHADOW
+
 # api for old ASIC
 obj-$(CONFIG_RTL8367_API_8370)		+= api_8370/
 
@@ -9,6 +12,8 @@ obj-$(CONFIG_RTL8367_API_8370)		+= api_8370/
 obj-$(CONFIG_RTL8367_API_8367B)		+= api_8367b/
 
 # common driver
-obj-$(CONFIG_RTL8367)			+= ralink_smi.o
+obj-y					+= ralink_gpp.o
+obj-$(CONFIG_RTL8367_CIF_SMI)		+= ralink_smi.o
+obj-$(CONFIG_RTL8367_CIF_MDIO)		+= ralink_mdio.o
 obj-$(CONFIG_RTL8367)			+= rtl8367_drv.o
 
