project tree: fix clean tree action

--- a/trunk/user/accel-pptpd/Makefile
+++ b/trunk/user/accel-pptpd/Makefile
@@ -27,7 +27,9 @@ configure:
 	)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f pptpd
 	rm -f pptpctrl
 	rm -f bcrelay
