--- a/trunk/user/dropbear/Makefile
+++ b/trunk/user/dropbear/Makefile
@@ -33,7 +33,9 @@ configure:
 	)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f dropbearmulti
 	rm -f config_done
 
