--- a/trunk/user/sdparm/Makefile
+++ b/trunk/user/sdparm/Makefile
@@ -22,7 +22,9 @@ configure:
 	)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f sdparm
 	rm -f config_done
 
