--- a/trunk/user/vsftpd/Makefile
+++ b/trunk/user/vsftpd/Makefile
@@ -5,10 +5,16 @@ TOP = $(ROOTDIR)/user
 INSTALL	= install
 IFLAGS  = -idirafter dummyinc
 
-CFLAGS	+= -Wall -O2 -W -Wshadow
+CFLAGS	+= -Wall -W -Wshadow
 CFLAGS  += -I$(TOP)/shared -I$(TOP)/shared/include
 CFLAGS	+= -I$(TOP)/libdisk
 CFLAGS	+= -ffunction-sections -fdata-sections
+
+ifneq ($(CONFIG_RT2880_FLASH_16M),y)
+CFLAGS += -Os
+else
+CFLAGS += -O2
+endif
 
 LIBS	= #-lcrypt
 LINK	= -Wl,-s
