--- a/trunk/user/igmpproxy/Makefile
+++ b/trunk/user/igmpproxy/Makefile
@@ -19,7 +19,9 @@ configure:
 	)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f igmpproxy
 	rm -f config_done
 
