--- a/trunk/user/radvd/Makefile
+++ b/trunk/user/radvd/Makefile
@@ -24,7 +24,9 @@ configure:
 	)
 
 clean:
-	$(MAKE) -C $(SRC_NAME) distclean
+	if [ -f $(SRC_NAME)/Makefile ] ; then \
+		$(MAKE) -C $(SRC_NAME) distclean ; \
+	fi ; \
 	rm -f radvd
 	rm -f config_done
 
