--- a/trunk/user/pppd/pppd/plugins/rp-pppoe/Makefile
+++ b/trunk/user/pppd/pppd/plugins/rp-pppoe/Makefile
@@ -23,10 +23,10 @@ PPPDVERSION = $(shell awk -F '"' '/VERSION/ { print $$2; }' ../../patchlevel.h)
 INSTALL	= install
 
 # Version is set ONLY IN THE MAKEFILE!  Don't delete this!
-RP_VERSION=3.10
+RP_VERSION=3.11
 
 COPTS=-O2 -g
-CFLAGS=$(COPTS) -I../../../include '-DRP_VERSION="$(RP_VERSION)"'
+CFLAGS=$(COPTS) -I../../../include '-DRP_VERSION="$(RP_VERSION)"' -DPLUGIN=1
 all: rp-pppoe.so
 
 rp-pppoe.so: libplugin.a plugin.o
